# sludre

./: .gitignore  README.md  pyproject.toml  requirements.txt  wordlist.json
.github/workflows/: windows-build.yml
packaging/: pyinstaller.spec
src/: app.py
src/core/: app_logging.py  audio_capture.py  config.py  env_secrets.py  hotkey_controller.py  llm_refiner.py  model_manager.py  pipeline.py  runtime_paths.py  text_cleaner.py  text_inserter.py  transcriber.py  wordlist_store.py
src/ui/: main_window.py
tests/: test_config.py  test_env_secrets.py  test_llm_refiner.py  test_model_manager.py  test_pipeline.py  test_runtime_paths.py  test_text_cleaner.py  test_text_inserter.py  test_transcriber.py  test_wordlist_store.py
tools/: build_exe.ps1
