[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sludre"
version = "0.1.0"
description = "Windows desktop app for local Danish STT with optional LLM cleanup."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "faster-whisper>=1.0.3",
  "huggingface_hub>=0.28.0",
  "numpy>=1.26",
  "sounddevice>=0.4.7",
  "keyboard>=0.13.5",
  "pyperclip>=1.9.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10",
]
dev = [
  "pytest>=8.3",
]

[dependency-groups]
build = [
  "pyinstaller>=6.10",
]
dev = [
  "pytest>=8.3",
]

[tool.uv]
package = false
